--- a/app/index.html
+++ b/app/index.html
@@ -70,7 +70,7 @@
                                 </a>
                                 <div class="aboutHisInt aboutfat">
                                     <p class="aboutChaEdu">
-                                        <span class="aboutName">彭旭东</span>&nbsp;<span class="aboutEdu">本科生</span>
+                                        <span class="aboutName">赵月涛</span>&nbsp;<span class="aboutEdu">博士在读</span>
                                     </p>
                                     <p class="aboutDire"></p>
                                     <p class="aboutCompany"></p>
@@ -83,10 +83,23 @@
                                 </a>
                                 <div class="aboutHisInt aboutfat">
                                     <p class="aboutChaEdu">
-                                        <span class="aboutName">彭旭东</span>&nbsp;<span class="aboutEdu">本科生</span>
+                                        <span class="aboutName">吴胜</span>&nbsp;<span class="aboutEdu">本科生</span>
+                                    </p>
+                                    <p class="aboutDire">创业</p>
+                                    <p class="aboutCompany"></p>
+                                </div>
+                            </li>
+
+                            <li class="aboutHead">
+                                <a href="javascript:void(0);" class="aboutHeada">
+                                    <img src="img/aboutHead2.png" class="aboutHeadPho">
+                                </a>
+                                <div class="aboutHisInt aboutfat">
+                                    <p class="aboutChaEdu">
+                                        <span class="aboutName">曾海</span>&nbsp;<span class="aboutEdu">本科生</span>
                                     </p>
                                     <p class="aboutDire"></p>
-                                    <p class="aboutCompany"></p>
+                                    <p class="aboutCompany">百度</p>
                                 </div>
                             </li>
 
@@ -99,24 +112,12 @@
                                         <span class="aboutName">彭旭东</span>&nbsp;<span class="aboutEdu">本科生</span>
                                     </p>
                                     <p class="aboutDire"></p>
-                                    <p class="aboutCompany"></p>
-                                </div>
-                            </li>
-
-                            <li class="aboutHead">
-                                <a href="javascript:void(0);" class="aboutHeada">
-                                    <img src="img/aboutHead2.png" class="aboutHeadPho">
-                                </a>
-                                <div class="aboutHisInt aboutfat">
-                                    <p class="aboutChaEdu">
-                                        <span class="aboutName">彭旭东</span>&nbsp;<span class="aboutEdu">本科生</span>
-                                    </p>
-                                    <p class="aboutDire"></p>
-                                    <p class="aboutCompany"></p>
+                                    <p class="aboutCompany">中国移动</p>
                                 </div>
                             </li>
 
                             <div class="aboutMoreOption">
+                                <p class="aboutLoad">Loading...</p>
                                 <a href="javascript:void(0);" class="aboutMore">more&gt;&gt;</a>
                                 <a href="javascript:void(0);" class="aboutBack">&lt;&lt;</a>
                             </div>
